--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,7 @@
         <members>A00000AitkVHyQwuqA</members>
         <members>A00000AucwLjV</members>
         <members>A00000CFxwey</members>
+        <members>A00000CtvvrIU</members>
         <members>A00000EKSKObCoPpbN</members>
         <members>A00000HdtwagahTin</members>
         <members>A00000IBiFvDJw</members>
@@ -18,6 +19,7 @@
         <members>A00000dUFMkBAFl</members>
         <members>A00000dlgYfPJYOwHp</members>
         <members>A00000edhNCCP</members>
+        <members>A00000gKZbUFR</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
         <members>A00000piZvEGK</members>
