--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -293,5 +293,10 @@
         <members>ARProfile10</members>
         <members>Admin</members>
         <name>Profile</name>
+    </types>
+    <types>
+        <members>ACCObjTest1__c.SairecordType1</members>
+        <members>ACCObjTest1__c.SairecordType2</members>
+        <name>RecordType</name>
     </types>
 </Package>
