--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,13 @@
         <members>A00000PhWPJin</members>
         <members>A00000PyrzofjZOo</members>
         <members>A00000RJAoAC</members>
+        <members>A00000SxujYacWYkhS</members>
         <members>A00000YHyRIldVm</members>
         <members>A00000adhLnOHe</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000dlgYfPJYOwHp</members>
         <members>A00000edhNCCP</members>
+        <members>A00000fdUlpQzFEij</members>
         <members>A00000gKZbUFR</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
