--- a/package.xml
+++ b/package.xml
@@ -14,8 +14,10 @@
         <members>A00000PhWPJin</members>
         <members>A00000PyrzofjZOo</members>
         <members>A00000RJAoAC</members>
+        <members>A00000SppwdyHe</members>
         <members>A00000SxujYacWYkhS</members>
         <members>A00000YHyRIldVm</members>
+        <members>A00000ZXIIbAEbX</members>
         <members>A00000adhLnOHe</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000dlgYfPJYOwHp</members>
