--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
         <members>A00000RJAoAC</members>
         <members>A00000SppwdyHe</members>
         <members>A00000SxujYacWYkhS</members>
+        <members>A00000XhlwFbn</members>
         <members>A00000YHyRIldVm</members>
         <members>A00000ZXIIbAEbX</members>
         <members>A00000adhLnOHe</members>
@@ -26,6 +27,7 @@
         <members>A00000gKZbUFR</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
+        <members>A00000phkkpmjbQreV</members>
         <members>A00000piZvEGK</members>
         <members>A00000rmFBXizYYX</members>
         <members>A00000vyBYbsdC</members>
