--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
         <members>A00000CtvvrIU</members>
         <members>A00000EKSKObCoPpbN</members>
         <members>A00000HdtwagahTin</members>
+        <members>A00000HtjHrue</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
@@ -25,6 +26,7 @@
         <members>A00000edhNCCP</members>
         <members>A00000fdUlpQzFEij</members>
         <members>A00000gKZbUFR</members>
+        <members>A00000iJWDAXg</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
         <members>A00000phkkpmjbQreV</members>
