--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
         <members>A00000YHyRIldVm</members>
         <members>A00000ZXIIbAEbX</members>
         <members>A00000adhLnOHe</members>
+        <members>A00000cgEbGgSoJ</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000dlgYfPJYOwHp</members>
         <members>A00000edhNCCP</members>
@@ -29,6 +30,7 @@
         <members>A00000iJWDAXg</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
+        <members>A00000pQfMMGgUzRid</members>
         <members>A00000phkkpmjbQreV</members>
         <members>A00000piZvEGK</members>
         <members>A00000rmFBXizYYX</members>
