--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,7 @@
         <members>A00000AucwLjV</members>
         <members>A00000CFxwey</members>
         <members>A00000CtvvrIU</members>
+        <members>A00000EDdsnLob</members>
         <members>A00000EKSKObCoPpbN</members>
         <members>A00000HdtwagahTin</members>
         <members>A00000HtjHrue</members>
@@ -15,6 +16,7 @@
         <members>A00000PyrzofjZOo</members>
         <members>A00000RJAoAC</members>
         <members>A00000SxujYacWYkhS</members>
+        <members>A00000TJMhNDkkuVLx</members>
         <members>A00000XhlwFbn</members>
         <members>A00000YHyRIldVm</members>
         <members>A00000adhLnOHe</members>
