--- a/package.xml
+++ b/package.xml
@@ -17,9 +17,11 @@
         <members>A00000RJAoAC</members>
         <members>A00000SxujYacWYkhS</members>
         <members>A00000TJMhNDkkuVLx</members>
+        <members>A00000UnuOlOE</members>
         <members>A00000XhlwFbn</members>
         <members>A00000YHyRIldVm</members>
         <members>A00000adhLnOHe</members>
+        <members>A00000bPUwZUOl</members>
         <members>A00000cgEbGgSoJ</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000dlgYfPJYOwHp</members>
