--- a/package.xml
+++ b/package.xml
@@ -34,9 +34,11 @@
         <members>A00000iJWDAXg</members>
         <members>A00000iajWZAH</members>
         <members>A00000iuBuQnJoiGe</members>
+        <members>A00000oMOBfKlcXI</members>
         <members>A00000pQfMMGgUzRid</members>
         <members>A00000phkkpmjbQreV</members>
         <members>A00000piZvEGK</members>
+        <members>A00000rFRZkHXHY</members>
         <members>A00000rmFBXizYYX</members>
         <members>A00000vyBYbsdC</members>
         <members>A0001</members>
