--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
         <members>A00000PyrzofjZOo</members>
+        <members>A00000QYoVmA</members>
         <members>A00000RJAoAC</members>
         <members>A00000SXynqsx</members>
         <members>A00000SxujYacWYkhS</members>
@@ -38,6 +39,7 @@
         <members>A00000phkkpmjbQreV</members>
         <members>A00000piZvEGK</members>
         <members>A00000rmFBXizYYX</members>
+        <members>A00000svbKuapei</members>
         <members>A00000vyBYbsdC</members>
         <members>A0001</members>
         <members>A0071</members>
