--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,7 @@
         <members>A000</members>
         <members>A00000AucwLjV</members>
         <members>A00000CFxwey</members>
+        <members>A00000CdwAwvAqkQo</members>
         <members>A00000CtvvrIU</members>
         <members>A00000DVjqpmUc</members>
         <members>A00000EDdsnLob</members>
@@ -13,6 +14,7 @@
         <members>A00000HtjHrue</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
+        <members>A00000NlFjpCAy</members>
         <members>A00000PhWPJin</members>
         <members>A00000PyrzofjZOo</members>
         <members>A00000RJAoAC</members>
