--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,8 @@
         <members>A0</members>
         <members>A000</members>
         <members>A00000AOZGddBpOrC</members>
+        <members>A00000ASDXlkQJKQ</members>
+        <members>A00000LgKTWXnk</members>
         <members>A0071</members>
         <members>A0123</members>
         <members>A01234</members>
