--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,8 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A0233</members>
+        <members>A036</members>
         <members>A1</members>
         <members>A10</members>
         <name>ApexClass</name>
