--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,7 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A0071</members>
         <members>A0233</members>
         <members>A036</members>
         <members>A1</members>
