--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,10 @@
         <members>A000</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
+        <members>A00000AucwLjV</members>
+        <members>A00000AupUAWfhM</members>
+        <members>A00000AxirNQVw</members>
+        <members>A00000BDDOYbGgNRbD</members>
         <members>A00000LgKTWXnk</members>
         <members>A0071</members>
         <members>A0123</members>
