--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -1640,6 +1640,7 @@
         <members>AYObj1__c.AYField1__c</members>
         <members>AYObj2__c.Ayf1__c</members>
         <members>AYObj3__c.Ayfd2__c</members>
+        <members>A_b__c.Pl3__c</members>
         <members>AccQATest1__c.AcQAField1__c</members>
         <members>Accobj4__c.Field1__c</members>
         <members>Accobj4__c.Field2__c</members>
