--- a/package.xml
+++ b/package.xml
@@ -1640,6 +1640,7 @@
         <members>AYObj1__c.AYField1__c</members>
         <members>AYObj2__c.Ayf1__c</members>
         <members>AYObj3__c.Ayfd2__c</members>
+        <members>A_b__c.A_Bfeild__c</members>
         <members>A_b__c.Pl3__c</members>
         <members>AccQATest1__c.AcQAField1__c</members>
         <members>Accobj4__c.Field1__c</members>
@@ -4828,6 +4829,7 @@
         <members>AYObj1__c</members>
         <members>AYObj2__c</members>
         <members>AYObj3__c</members>
+        <members>A_b__c</members>
         <members>AccQATest1__c</members>
         <members>Accobj4__c</members>
         <members>Account</members>
@@ -6506,6 +6508,7 @@
         <members>ACC_Obj1__c.RT_4</members>
         <members>ACC_Obj1__c.RT_5</members>
         <members>ACC_Obj1__c.Retype1</members>
+        <members>A_b__c.RC1</members>
         <members>Account.Test</members>
         <members>Contact.CRT1</members>
         <members>DLCObj18__c.DLCObj18_RcType1</members>
