--- a/package.xml
+++ b/package.xml
@@ -3140,6 +3140,9 @@
         <name>EmailServicesFunction</name>
     </types>
     <types>
+        <members>EmailTemp1</members>
+        <members>EmailTemp1/PVFile1</members>
+        <members>EmailTemp1/PVFile2</members>
         <members>unfiled$public/CommunityChangePasswordEmailTemplate</members>
         <members>unfiled$public/CommunityChgEmailVerNewTemplate</members>
         <members>unfiled$public/CommunityChgEmailVerOldTemplate</members>
