--- a/package.xml
+++ b/package.xml
@@ -3141,6 +3141,8 @@
     </types>
     <types>
         <members>EmailTemp1</members>
+        <members>EmailTemp1/DR1</members>
+        <members>EmailTemp1/DR2</members>
         <members>unfiled$public/CommunityChangePasswordEmailTemplate</members>
         <members>unfiled$public/CommunityChgEmailVerNewTemplate</members>
         <members>unfiled$public/CommunityChgEmailVerOldTemplate</members>
