--- a/package.xml
+++ b/package.xml
@@ -3098,6 +3098,9 @@
         <members>EmailTemp1</members>
         <members>Folder1</members>
         <members>T2</members>
+        <members>T2/T123</members>
+        <members>T2/dg</members>
+        <members>T2/tem111</members>
         <members>TempFolder1</members>
         <members>TempFolder1/NF1</members>
         <members>TempFolder1/NF2</members>
