--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,9 @@
         <members>A0</members>
         <members>A000</members>
         <members>A00000ABdkKerh</members>
+        <members>A00000AOZGddBpOrC</members>
         <members>A00000LgKTWXnk</members>
+        <members>A00000SXaQxc</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
