--- a/package.xml
+++ b/package.xml
@@ -61,6 +61,7 @@
         <members>A1__c.F1__c</members>
         <members>ACDemoOBj1__c.Ftest12__c</members>
         <members>A_b__c.A_Bfeild__c</members>
+        <members>A_b__c.PLN1__c</members>
         <members>Case.AccountId</members>
         <members>Case.AssetId</members>
         <members>Case.AutorabitExtId__c</members>
