--- a/package.xml
+++ b/package.xml
@@ -60,6 +60,8 @@
     <types>
         <members>A1__c.F1__c</members>
         <members>ACDemoOBj1__c.Ftest12__c</members>
+        <members>ACR5__c.Field2__c</members>
+        <members>ACR5__c.field1__c</members>
         <members>A_b__c.A_Bfeild__c</members>
         <members>A_b__c.PLN1__c</members>
         <members>Case.AccountId</members>
@@ -123,6 +125,7 @@
     <types>
         <members>A1__c</members>
         <members>ACDemoOBj1__c</members>
+        <members>ACR5__c</members>
         <members>A_b__c</members>
         <members>Case</members>
         <members>DLCObj18__c</members>
@@ -209,6 +212,7 @@
         <name>Profile</name>
     </types>
     <types>
+        <members>ACR5__c.F1</members>
         <members>A_b__c.RC1</members>
         <members>Dbj1__c.Dbj_RC1</members>
         <members>Dbj1__c.Dbj_RC2</members>
