--- a/package.xml
+++ b/package.xml
@@ -133,6 +133,12 @@
         <name>CustomObject</name>
     </types>
     <types>
+        <members>SaiEmailTemp1</members>
+        <members>SaiEmailTemp1/File1</members>
+        <members>SaiEmailTemp1/File2</members>
+        <name>EmailTemplate</name>
+    </types>
+    <types>
         <members>CaseClose-Close Case Layout</members>
         <name>Layout</name>
     </types>
