--- a/package.xml
+++ b/package.xml
@@ -134,6 +134,9 @@
     </types>
     <types>
         <members>SaiEmailTemp1</members>
+        <members>SaiTempfolder2</members>
+        <members>SaiTempfolder2/F1</members>
+        <members>SaiTempfolder2/F2</members>
         <name>EmailTemplate</name>
     </types>
     <types>
