--- a/package.xml
+++ b/package.xml
@@ -135,6 +135,8 @@
     <types>
         <members>SaiEmailTemp1</members>
         <members>SaiTempfolder2</members>
+        <members>SaiTempfolder2/cd</members>
+        <members>SaiTempfolder2/vgd</members>
         <name>EmailTemplate</name>
     </types>
     <types>
