--- a/package.xml
+++ b/package.xml
@@ -100,6 +100,7 @@
         <members>AD1</members>
         <members>AD2</members>
         <members>AN2</members>
+        <members>ANS1</members>
         <members>ANew1</members>
         <members>ANew2</members>
         <members>ANewCls1</members>
