--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
         <members>A027</members>
         <members>A028</members>
         <members>A08089</members>
+        <members>A081</members>
         <members>A10</members>
         <members>A12</members>
         <members>A13</members>
