--- a/package.xml
+++ b/package.xml
@@ -28,6 +28,7 @@
         <members>A194</members>
         <members>A30</members>
         <members>A32</members>
+        <members>ANS1</members>
         <members>E3</members>
         <members>sai007</members>
         <name>ApexClass</name>
