--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -3098,6 +3098,9 @@
     <types>
         <members>EmailTemp1</members>
         <members>Folder1</members>
+        <members>SKv</members>
+        <members>SKv/tesst11</members>
+        <members>SKv/test</members>
         <members>TempFolder1</members>
         <members>TempFolder1/NF1</members>
         <members>TempFolder1/NF2</members>
