--- a/package.xml
+++ b/package.xml
@@ -3199,6 +3199,9 @@
     <types>
         <members>EmailTemp1</members>
         <members>Folder1</members>
+        <members>SKV5</members>
+        <members>SKV5/F1</members>
+        <members>SKV5/F2</members>
         <members>SKv</members>
         <members>TempFolder1</members>
         <members>TempFolder1/NF1</members>
