--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
+    <types>
+        <members>A000</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>EMt1</members>
+        <members>EMt1/ef1</members>
+        <members>EMt1/ef2</members>
+        <name>EmailTemplate</name>
+    </types>
 </Package>
