--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,8 @@
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
         <members>A00000LgKTWXnk</members>
+        <members>A00000fFJbPbfQBtkC</members>
+        <members>A00000mrIVEt</members>
         <members>A0071</members>
         <members>A01234</members>
         <members>A01234567</members>
