new commit labl

--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,9 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000</members>
+        <members>A00000AFBXiHuNujdu</members>
+        <members>A00000ANFhPhiJ</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
         <members>A00000LgKTWXnk</members>
