--- a/package.xml
+++ b/package.xml
@@ -3198,6 +3198,9 @@
     </types>
     <types>
         <members>EmailTemp1</members>
+        <members>Emf1</members>
+        <members>Emf1/F1</members>
+        <members>Emf1/F2</members>
         <members>Folder1</members>
         <members>SKV5</members>
         <members>SKv</members>
