--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,8 @@
         <members>A000</members>
         <members>A00000AADmnDec</members>
         <members>A00000ABdkKerh</members>
+        <members>A00000AOZGddBpOrC</members>
+        <members>A00000ASDXlkQJKQ</members>
         <members>A00000YoKXPxGOf</members>
         <members>A00000YomNfcq</members>
         <members>A00000YpCtYD</members>
