--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
         <members>A0</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000ASDXlkQJKQ</members>
+        <members>A00000LgKTWXnk</members>
         <members>A00000UipcOVCKCqWy</members>
         <members>A0001</members>
         <members>A0071</members>
