--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
         <members>A00000AOZGddBpOrC</members>
+        <members>A00000ASDXlkQJKQ</members>
+        <members>A00000UipcOVCKCqWy</members>
         <members>A0233</members>
         <members>A036</members>
         <members>A1</members>
