--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,7 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AOZGddBpOrC</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A01234</members>
