--- a/package.xml
+++ b/package.xml
@@ -6433,6 +6433,8 @@
         <members>Profileest</members>
         <members>ReadOnly</members>
         <members>SaiJun19thprofile</members>
+        <members>Saiprofile1</members>
+        <members>Saiprofile2</members>
         <members>Silver Partner User</members>
         <members>SolutionManager</members>
         <members>Standard</members>
