--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AOZGddBpOrC</members>
+        <members>A00000ASDXlkQJKQ</members>
+        <members>A00000LgKTWXnk</members>
+        <members>A00000SXaQxc</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
@@ -310,6 +314,11 @@
         <members>Case</members>
         <members>Lead</members>
         <name>AssignmentRules</name>
+    </types>
+    <types>
+        <members>Default_Catch up</members>
+        <members>Default_TestCommunity</members>
+        <name>Audience</name>
     </types>
     <types>
         <members>ANA_LTNG01_CustomLookup_oppty</members>
@@ -1672,6 +1681,7 @@
         <members>SLabel2</members>
         <members>SS1</members>
         <members>SS2</members>
+        <members>STAB203_Label</members>
         <members>STCL1</members>
         <members>SV1</members>
         <members>SaiCustomlabel10</members>
