--- a/package.xml
+++ b/package.xml
@@ -2736,6 +2736,8 @@
         <members>QAProfile1</members>
         <members>ReadOnly</members>
         <members>SaiJun19thprofile</members>
+        <members>Saiprofile1</members>
+        <members>Saiprofile2</members>
         <members>Silver Partner User</members>
         <members>SolutionManager</members>
         <members>Standard</members>
