--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,27 @@
         <members>A27</members>
         <members>A28</members>
         <members>A29</members>
+        <members>ChangePasswordController</members>
+        <members>ChangePasswordControllerTest</members>
+        <members>CommunitiesLandingController</members>
+        <members>CommunitiesLandingControllerTest</members>
+        <members>CommunitiesLoginController</members>
+        <members>CommunitiesLoginControllerTest</members>
+        <members>CommunitiesSelfRegConfirmController</members>
+        <members>CommunitiesSelfRegConfirmControllerTest</members>
+        <members>CommunitiesSelfRegController</members>
+        <members>CommunitiesSelfRegControllerTest</members>
+        <members>CreateContactFrmEmail</members>
+        <members>E2</members>
+        <members>E3</members>
+        <members>E4</members>
+        <members>E5</members>
+        <members>Feb01</members>
+        <members>Feb10</members>
+        <members>Feb22ndCls1</members>
+        <members>Feb5</members>
+        <members>Km4</members>
+        <members>LBClass1</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -37,11 +58,26 @@
         <members>AC1</members>
         <members>AC133</members>
         <members>AC2</members>
+        <members>ACCL1</members>
+        <members>ACCL3</members>
+        <members>ACCTest</members>
+        <members>ACCt3</members>
+        <members>ACL101</members>
+        <members>ACL11</members>
+        <members>ACL12</members>
         <members>ACTNRLabel5</members>
         <members>ACTNRLabel7</members>
         <members>ACTNR_Label6</members>
         <members>ACTNR_Label8</members>
         <members>ACTRLabel1</members>
+        <members>KALabel1</members>
+        <members>KALabel2</members>
+        <members>KL1</members>
+        <members>KMl1</members>
+        <members>Kl1233</members>
+        <members>L12</members>
+        <members>L122</members>
+        <members>L23</members>
         <name>CustomLabel</name>
     </types>
     <types>
