--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>49.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -325,6 +324,7 @@
         <members>Branch_Code_Update</members>
         <members>ContactTrigger1</members>
         <members>Leadtrigger1</members>
+        <members>SaiTrigger</members>
         <name>ApexTrigger</name>
     </types>
     <types>
