--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000ASDXlkQJKQ</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
@@ -219,6 +219,7 @@
         <members>SampathAug19thClass1</members>
         <members>SampathClass1</members>
         <members>Sep1</members>
+        <members>Sep8Cls4</members>
         <members>SiteLoginController</members>
         <members>SiteLoginControllerTest</members>
         <members>SiteRegisterController</members>
@@ -1989,6 +1990,10 @@
         <members>Georgia_COBRA/Newly_Installed_Group_2</members>
         <members>Georgia_COBRA/Newly_Installed_Group_3</members>
         <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>BigHack__b.BHIndex</members>
+        <name>Index</name>
     </types>
     <types>
         <members>addNewShares</members>
