--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>49.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000ABdkKerh</members>
+        <members>A00000ASDXlkQJKQ</members>
+        <members>A00000SXaQxc</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
