--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,11 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AOZGddBpOrC</members>
+        <members>A00000ASDXlkQJKQ</members>
+        <members>A00000LgKTWXnk</members>
+        <members>A00000SXaQxc</members>
+        <members>A00000UipcOVCKCqWy</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
@@ -98,15 +103,33 @@
         <members>A789</members>
         <members>A7891</members>
         <members>A8</members>
+        <members>A8971</members>
         <members>A98</members>
         <members>A989</members>
         <members>A999</members>
         <members>AA54</members>
         <members>AAAA07</members>
+        <members>AAClsABPSiWR</members>
+        <members>AAClsBsPpRuWD</members>
+        <members>AAClsLTOPVpSkO</members>
+        <members>AAClsRlNWhlAzSWUU</members>
+        <members>AAClswhgchigdGp</members>
         <members>AC123</members>
+        <members>AClassIyKpXdRSGHur</members>
+        <members>AClassJBjqqClY</members>
+        <members>AClassJCbvVodWnR</members>
+        <members>AClassJFHYnlXnuzTs</members>
+        <members>AClassJHqLEEujkC</members>
+        <members>AClassJMOKYSEkS</members>
+        <members>AClassJNMPYcoOGWvL</members>
+        <members>AClassJUDmVHqLr</members>
+        <members>AClassJVDicQsl</members>
+        <members>AClassJWqRrXHaj</members>
+        <members>AClassJXaOze</members>
         <members>AD1</members>
         <members>AD2</members>
         <members>AN2</members>
+        <members>ANS1</members>
         <members>ANew1</members>
         <members>ANew2</members>
         <members>ANewCls1</members>
@@ -181,6 +204,9 @@
         <members>E3</members>
         <members>E4</members>
         <members>E5</members>
+        <members>Feb01</members>
+        <members>Feb10</members>
+        <members>Feb22ndCls1</members>
         <members>Feb5</members>
         <members>Feb523</members>
         <members>ForgotPasswordController</members>
@@ -188,6 +214,8 @@
         <members>HarishClass2</members>
         <members>Jan5</members>
         <members>July22nd</members>
+        <members>Jun22ndcls1</members>
+        <members>Jun24cls1</members>
         <members>K1</members>
         <members>KKK2</members>
         <members>KKK3</members>
@@ -201,6 +229,7 @@
         <members>LightningLoginFormControllerTest</members>
         <members>LightningSelfRegisterController</members>
         <members>LightningSelfRegisterControllerTest</members>
+        <members>M11Cls1</members>
         <members>Mar16saiclass4</members>
         <members>Mar19Cls3</members>
         <members>Mar20Class3</members>
@@ -225,7 +254,11 @@
         <members>PUlreqcls1</members>
         <members>Pclass1</members>
         <members>Pclass3</members>
+        <members>QC1</members>
+        <members>QC2</members>
         <members>RClass1</members>
+        <members>RGorg01</members>
+        <members>RGvc01</members>
         <members>RGvc02</members>
         <members>ReltrainTest</members>
         <members>S097</members>
@@ -236,6 +269,7 @@
         <members>SAClS2</members>
         <members>SAClass200</members>
         <members>SAClass201</members>
+        <members>SJun29cls1</members>
         <members>SKVAug16Class1</members>
         <members>SKVClass1</members>
         <members>SKVClass2</members>
@@ -276,6 +310,7 @@
         <members>SiteLoginControllerTest</members>
         <members>SiteRegisterController</members>
         <members>SiteRegisterControllerTest</members>
+        <members>Sri2</members>
         <members>V6</members>
         <members>a0testclass</members>
         <members>a10testclass</members>
@@ -301,6 +336,7 @@
         <members>b_saiclass</members>
         <members>c_saiclass</members>
         <members>dest1234</members>
+        <members>febthCls1</members>
         <members>jsonFix1</members>
         <members>kkkk</members>
         <members>km1</members>
@@ -316,7 +352,11 @@
         <members>pavancls2</members>
         <members>pr</members>
         <members>rtclass1</members>
+        <members>s98765</members>
+        <members>sa123</members>
         <members>sai007</members>
+        <members>skvcls1</members>
+        <members>skvnew007</members>
         <members>tejaclass1</members>
         <members>u8</members>
         <members>u9</members>
@@ -1639,6 +1679,8 @@
     <types>
         <members>AAtest456</members>
         <members>AC1</members>
+        <members>AC100</members>
+        <members>AC11</members>
         <members>AC133</members>
         <members>AC2</members>
         <members>AC56</members>
