--- a/package.xml
+++ b/package.xml
@@ -6450,6 +6450,7 @@
         <members>clone profile</members>
         <members>rk-profiles2</members>
         <members>sp1</members>
+        <members>test profile 35816</members>
         <name>Profile</name>
     </types>
     <types>
